Link stylesheet, add fontawesome kit and create CSS variables

--- a/style.css
+++ b/style.css
@@ -1,2 +1,11 @@
 /* Google Fonts import: Poppins & Lora */
 @import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/* CSS Variables for consistent styling */
+:root {
+    --primary-font: 'Poppins', sans-serif;
+    --secondary-font: 'Lora', serif;
+    --primary-color: #212121; /* Graphite Black */
+    --secondary-color: #22223B; /* Dark Blue */
+    --background-color-primary: #CBDFBD; /* Beige Green */
+    --background-color-secondary: #A3C4BC; /* Tea Green */
