Add and style nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,17 +8,30 @@
     --primary-color: #212121; /* Graphite Black */
     --secondary-color: #22223b; /* Dark Blue */
     --background-color-primary: #e2ecdf; /* Beige Green */
-    --background-color-secondary: #d1e1de; /* Tea Green */
+    --background-color-secondary: #425c52; /* Deep Sage */
 }
 
-h1 {
+/* Global styles */
+
+body {
+    font-family: var(--primary-font);
+}
+
+h1,
+h2,
+h3 {
     font-family: var(--secondary-font);
     color: var(--secondary-color);
 }
 
-p {
-    font-family: var(--primary-font);
-    color: var(--primary-color);
+/* Navbar */
+
+#navbar {
+    background-color: var(--background-color-secondary);
+}
+
+#navbar .logo {
+    width: 30px;
 }
 
 body {
