--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,3 +42,15 @@ h3 {
 body {
     background-color: var(--background-color-primary);
 }
+
+/* grid visualisation CSS for testing */
+
+.container,
+.row {
+    border: 2px solid black;
+}
+
+.col-12 {
+    border: 2px solid white;
+    background-color: lightgray;
+}
