--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,6 +61,16 @@ body {
 }
 
 /* Buttons */
+.hero .btn {
+    background-color: transparent;
+    color: var(--third-color);
+}
+
+.hero .btn:hover {
+    color: var(--secondary-color);
+    background-color: var(--third-color);
+}
+
 .custom-button-outline {
     border: 3px solid var(--background-color-secondary);
     color: var(--background-color-secondary);
