Add and style modal for professional help section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,12 @@ body {
     margin-bottom: 3rem;
 }
 
+/* Professional help */
+#professional-help-modal {
+    --bs-modal-bg: var(--background-color-tertiary);
+    --bs-modal-border-color: var(--bs-border-color-translucent);
+}
+
 /* grid visualisation CSS for testing */
 
 /* .container,
